--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
 # ignore JetBrains project
 .idea/
 
+dist/
+
 # ignore node modules
 node_modules/
 package-lock.json
-
-# ignore duplicated dist folder for localization
-dist/en
-dist/es-ES
