feat(build): use jekyll and restyle website

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 # ignore JetBrains project
 .idea/
 
-# ignore node modules
-node_modules/
-package-lock.json
-
-# ignore duplicated dist folder for localization
-dist/en
-dist/es-ES
+_site/
