Apply suggestions from code review

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,8 @@ jobs:
           rm -f -r ./gh-pages/*
 
           # move contents of dist to gh-pages
-          mv ./dist/{.,}* ./gh-pages/
+          # https://stackoverflow.com/a/20192079/11214013
+          cp -r ./dist/. ./gh-pages/
 
           # move node_modules directory to gh-pages
           mv -f ./node_modules/ ./gh-pages/
