--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -200,6 +200,7 @@ jobs:
     name: Deploy to Pages
     if: >-
       (github.event_name == 'push' && github.ref == 'refs/heads/master') ||
+      (github.event_name == 'schedule') ||
       (github.event_name == 'workflow_dispatch')
     runs-on: ubuntu-latest
     needs: build
