--- a/_config_theme.yml
+++ b/_config_theme.yml
@@ -1,29 +1,8 @@
 ---
-###########################################################
-### Welcome to Beautiful Jekyll!
-### This config file is meant for settings that affect your entire website. When you first
-### set up your website you should go through all these settings and edit them, but after
-### the initial set up you won't need to come back to this file often.
-###########################################################
+# See https://github.com/daattali/beautiful-jekyll/blob/master/_config.yml for documented options
 
-############################
-# --- Required options --- #
-############################
-
-# https://beautifuljekyll.com/getstarted/#method-1-github-repository-with-remote_theme
-# remote_theme: daattali/beautiful-jekyll
-# Our custom workflow will handle setting up the theme. E.g. combining beautifuljekyll with our customizations.
-
-# Name of website
 title: LizardByte
-
-# Your name to show in the footer
 author: LizardByte
-
-###############################################
-# --- List of links in the navigation bar --- #
-###############################################
-
 navbar-links:
   ❤ Donate:
     - GitHub: "https://github.com/sponsors/LizardByte"
@@ -41,34 +20,10 @@ navbar-links:
     - Contributing: "https://docs.lizardbyte.dev/en/latest/developers/contributing.html"
     - Dashboard: "https://app.lizardbyte.dev/dashboard"
     - Dev Status: "https://status-dev.LizardByte.dev"
-
-# navbar-extra:
-#   - change-theme.html
-
-################
-# --- Logo --- #
-################
-
-# Image to show in the navigation bar - works best with a square image
-# Remove this parameter if you don't want an image in the navbar
 avatar: "/assets/img/navbar-avatar.png"
-
-# By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
-
-# If you want to have an image logo in the top-left corner instead of having the title of the website,
-# then specify the following parameter
-# title-img: /path/to/image
-
-
-#####################################
-# --- Footer social media links --- #
-#####################################
-
-# Select the social network links that you want to show in the footer.
-# Uncomment the links you want to show and add your information to each one.
 social-network-links:
-  rss: true  # remove this line if you don't want to show an RSS link at the bottom
+  rss: true
   discord: d6MpcrbYQs
   facebook: LizardByteDev
   github: LizardByte
@@ -76,88 +31,22 @@ social-network-links:
   reddit: r/LizardByte
   twitter: LizardByteDev
   youtube: c/LizardByteDev
-#  email: "someone@example.com"
-#  facebook: yourname
-#  twitter: yourname
-#  youtube: c/yourname
-# ---
-#  medium: yourname
-#  reddit: yourname
-#  linkedin: daattali
-#  xing: yourname
-#  stackoverflow: "3943160/daattali"
-#  snapchat: deanat78
-#  instagram: deanat78
-#  spotify: yourname
-#  telephone: +14159998888
-#  steam: deanat78
-#  twitch: yourname
-#  yelp: yourname
-#  telegram: yourname
-#  calendly: yourname
-#  mastodon: instance.url/@username
-#  bluesky: yourname
-#  ORCID: your ORCID ID
-#  google-scholar: your google scholar
-#  discord: "invite_code" or "users/userid" or "invite/invite_code"
-#  kaggle: yourname
-#  hackerrank: yourname
-#  gitlab: yourname
-
-# If you want your website to generate an RSS feed, provide a description
-# The URL for the feed will be https://<your_website>/feed.xml
 rss-description: LizardByte
-
-###########################
-# --- General options --- #
-###########################
-
-# Select which social network share links to show in posts
 share-links-active:
   twitter: true
   facebook: true
   linkedin: true
   vk: false
-
-# remove the "Powered by Beautiful Jekyll" text in the footer
-remove-ads: true
-
-# How to display the link to your website in the footer
-# Remove this if you don't want a link in the footer
+remove-ads: true  # remove the "Powered by Beautiful Jekyll" text in the footer
 url-pretty: "app.LizardByte.dev"
-
-# Add the website title to the title of every page
 title-on-all-pages: true
-
-# Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
-
-# Whether or not to show an excerpt for every blog post in the feed page
 feed_show_excerpt: true
-
-# Whether or not to show a list of tags below each post preview in the feed page
 feed_show_tags: true
-
-# Add a search button to the navbar
 post_search: true
-
-# Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
 edit_page_button: true
-
-# Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
-# If this setting is off, then long sub-menu words might get cut off
-# See https://github.com/daattali/beautiful-jekyll/issues/765 to understand the issue this setting can solve
 navbar-var-length: true
-
-# The keywords to associate with your website, for SEO purposes
 keywords: "LizardByte,Sunshine,Moonlight,self-hosted,gamestreaming,gamestream,game,streaming,media server"
-
-######################################
-# --- Colors / background image --- #
-######################################
-
-# Personalize the colors in your website. Color values can be any valid CSS color
-
 footer-col: "#242526"
 footer-hover-col: "#28a9e6"
 footer-link-col: "#dfdfdf"
@@ -169,80 +58,10 @@ navbar-col: "#151515"
 navbar-text-col: "#e4e6eb"
 page-col: "#303436"
 text-col: "#e4e4e4"
-
-# Alternatively, the navbar, footer, and page background can be set to an image
-# instead of color
-
-# navbar-img: "/assets/img/bgimage.png"
-# footer-img: "/assets/img/bgimage.png"
-# page-img: "/assets/img/bgimage.png"
-
-# Suggest a color for mobile browsers to use as the browser's theme. This is only supported by a few mobile browsers.
 mobile-theme-col: "#05FF3B"
-
-# For any extra visual customization, you can include additional CSS files in every page on your site.
-# List any custom CSS files here
 site-css:
   - "/assets/css/custom-styles.css"
-
-# If you have common JavaScript files that should be included in every page, list them here
-# site-js:
-#   - "/assets/js/custom.js"
-
-#################################
-# --- Web Analytics Section --- #
-#################################
-
-# Fill in your Google Analytics tag ID (or "Measurement ID") to track your website usage
-gtag: "G-0NFSCW63S2"  # TODO: Update this with your own Google Analytics tag ID
-
-# Fill in your Cloudflare Analytics beacon token to track your website using Cloudflare Analytics
-# cloudflare_analytics: ""
-
-# Google Tag Manager ID
-# gtm: ""
-
-# Matomo (aka Piwik) Web statistics
-# Uncomment the following section to enable Matomo. The opt-out parameter controls
-# whether or not you want to allow users to opt out of tracking.
-# matomo:
-#   site_id: "9"
-#   uri: "demo.wiki.pro"
-#   opt-out: true
-
-# Google Universal Analytics ID -- deprecated
-# As of July 2023 this is no longer supported by Google! If you are still using `google_analytics`,
-# you should switch to using the `gtag` field above instead.
-# google_analytics: "UA-XXXXXXXX-X"
-
-####################
-# --- Comments --- #
-####################
-
-# To use Disqus comments, sign up to https://disqus.com and fill in your Disqus shortname (NOT the userid)
-# disqus: ""
-
-# To use Facebook Comments, create a Facebook app and fill in the Facebook App ID
-# fb_comment_id: ""
-
-# To use CommentBox, sign up for a Project ID on https://commentbox.io
-# commentbox: "" # Project ID, e.g. "5694267682979840-proj"
-
-# To use Utterances comments: (0) uncomment the following section, (1) fill in
-# "repository" (make sure the repository is public), (2) Enable Issues in your repository,
-# (3) Install the Utterances app in your repository https://github.com/apps/utterances
-# See more details about the parameters below at https://utteranc.es/
-# utterances:
-#  repository: LizardByte/community  # GitHub username/repository eg. "daattali/beautiful-jekyll"
-#  issue-term: pathname  # Mapping between blog posts and GitHub issues
-#  theme: gruvbox-dark  # Utterances theme
-#  label: blog-comments  # Label that will be assigned to GitHub Issues created by Utterances
-
-# To use giscus comments:
-# (0) Uncomment the following giscus section, (1) Enable Discussions in your GitHub repository,
-# (2) Install the giscus app in your repository (details at https://giscus.app),
-# (3) Fill in *all* the parameters below
-# See more details about giscus and each of the following parameters at https://giscus.app
+gtag: "G-SSW90X5YZX"
 giscus:
   hostname: giscus.app  # Replace with your giscus instance's hostname if self-hosting
   repository: LizardByte/community  # GitHub username/repository eg. "daattali/beautiful-jekyll"
@@ -257,30 +76,14 @@ giscus:
   theme: /assets/css/giscus.css
   lang: en
   lazy-loading: true
-
-# other options for comments are staticman
-
-################
-# --- Misc --- #
-################
-
-# Ruby Date Format to show dates of posts
 date_format: "%B %-d, %Y"
 
-# Facebook App ID
-# fb_app_id: ""
-
-#################################################################################
-# --- You don't need to touch anything below here (but you can if you want) --- #
-#################################################################################
-
-# Output options (more information on Jekyll's site)
+# Advanced settings
 timezone: "America/New_York"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
 paginate: 5
-
 kramdown:
   input: GFM
 
@@ -310,7 +113,6 @@ defaults:
 
 # Exclude these files from production site
 exclude:
-  # - CNAME
   - Dockerfile
   - Gemfile
   - Gemfile.lock
