fix(website): ensure correct base url is used

--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -172,7 +172,9 @@ jobs:
       - name: Setup CI config
         run: |
           echo "---" > _config_ci.yml
-          echo "baseurl: ${{ steps.configure-pages.outputs.base_path }}" >> _config_ci.yml
+          echo "baseurl: ${{ steps.configure-pages.outputs.base_url }}" >> _config_ci.yml
+
+          cat _config_ci.yml
 
       - name: Build site
         env:
