--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -254,7 +254,7 @@ jobs:
         run: |
           7z x _site.zip -o.
           rm _site.zip
-          touch gh-pages/.nojekyll
+          touch .nojekyll
 
       - name: Deploy to gh-pages
         uses: actions-js/push@v1.5
