Add Amazon affiliate products integration
Enabled Amazon affiliate products in the theme configuration, added a data file listing products with tags for categorization, and created an API endpoint to serve product data as JSON. This allows for dynamic display and usage of affiliate products across the site.

--- a/_config_theme.yml
+++ b/_config_theme.yml
@@ -3,6 +3,11 @@
 
 title: LizardByte
 author: LizardByte
+
+amazon_products:
+  enabled: true
+  affiliate_tag: 'lizardbyte-blog-20'
+
 navbar-links:
   ❤ Donate:
     - GitHub: "https://github.com/sponsors/LizardByte"
