ci: Pin actions-js/push to specific commit in workflow
Updated the 'Deploy to gh-pages' step in the Jekyll build workflow to use a specific commit hash for actions-js/push instead of the v1.5 tag, ensuring reproducibility and stability.

--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -256,7 +256,7 @@ jobs:
           touch .nojekyll
 
       - name: Deploy to gh-pages
-        uses: actions-js/push@v1.5
+        uses: actions-js/push@5a7cbd780d82c0c937b5977586e641b2fd94acc5  # v1.5
         with:
           github_token: ${{ secrets.GH_BOT_TOKEN }}
           author_email: ${{ secrets.GH_BOT_EMAIL }}
