feat(discord)!: remove discord widget

--- a/_config_theme.yml
+++ b/_config_theme.yml
@@ -80,9 +80,7 @@ site-css:
   - "/assets/css/styles.css"
 site-js:
   - "https://cdn.jsdelivr.net/npm/@lizardbyte/shared-web@2025.326.11214/dist/crowdin.js"
-  - "https://cdn.jsdelivr.net/npm/@lizardbyte/shared-web@2025.326.11214/dist/discord.js"
   - "/assets/js/crowdin-init.js"
-  - "/assets/js/discord-init.js"
 gtag: "G-SSW90X5YZX"
 giscus:
   hostname: giscus.app  # Replace with your giscus instance's hostname if self-hosting
@@ -159,4 +157,5 @@ include:
 
 plugins:
   - jekyll-paginate
+  - jekyll-redirect-from
   - jekyll-sitemap
