chore(amazon): add SofaBaton X2 affiliate link

--- a/_data/amazon_products.yml
+++ b/_data/amazon_products.yml
@@ -53,3 +53,11 @@
     - storage
     - computer hardware
     - gaming
+
+- title: >-
+    SofaBaton X2 Universal Remote with Touchscreen, All in One Universal Remote Control with Powerful Hub,
+    One-Touch Activities, Custom APP, Compatible with Alexa&Google Assistant&Home Assistant
+  image: "https://m.media-amazon.com/images/I/616sCEAGTtL._AC_SL1500_.jpg"
+  link: "https://www.amazon.com/dp/B0G46KHL8K"
+  tags:
+    - accessories
