--- a/_config_theme.yml
+++ b/_config_theme.yml
@@ -24,7 +24,7 @@ navbar-links:
   Tools:
     - Gamepad Tester: "gamepad-tester"
   Downloads:
-    - Packages: "packages"
+    - Packages: "https://app.lizardbyte.dev/packages"
     - Homebrew: "https://github.com/LizardByte/homebrew-homebrew"
     - Pacman: "https://github.com/LizardByte/pacman-repo"
   Development:
@@ -64,10 +64,10 @@ sass:
   sass_dir: _sass
   style: compressed
 site-css:
-  - "https://cdn.jsdelivr.net/npm/@lizardbyte/shared-web@2025.326.11214/dist/crowdin-bootstrap-css.css"
+  - "https://cdn.jsdelivr.net/npm/@lizardbyte/shared-web@2026.219.33142/dist/crowdin-bootstrap-css.css"
   - "/assets/css/styles.css"
 site-js:
-  - "https://cdn.jsdelivr.net/npm/@lizardbyte/shared-web@2025.326.11214/dist/crowdin.js"
+  - "https://cdn.jsdelivr.net/npm/@lizardbyte/shared-web@2026.219.33142/dist/crowdin.js"
   - "/assets/js/crowdin-init.js"
 theme-switcher: true
 theme-switcher-style: 'button'
